@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 May 2007; Vlastimil Babka <caster@gentoo.org> rssowl-1.2.3.ebuild:
+  Set depend to the swt version that exports MOZILLA_FIVE_HOME and improve the
+  built_with_use call.
+
   19 May 2007; Vlastimil Babka <caster@gentoo.org> rssowl-1.2.3.ebuild:
   Use java-pkg_getjars instead of jar-from; stop bundling iTextAsian.jar; Use
   T instead of /tmp during build; drop seamonkey USEflag and only warn about
